fix download cropping

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -421,7 +421,7 @@ button:disabled {
 
 .chart-container {
   width: 100%;
-  height: 450px;
+  height: auto;
   margin-top: 32px;
   position: relative;
 }
